[gd_scene load_steps=16 format=3 uid="uid://cg6yl8ug7r48k"]

[ext_resource type="Script" uid="uid://c7gkgo0h2apv5" path="res://Scripts/Gabriel/Enemy Type Scripts/shotgun_enemy_renforcements.gd" id="1_2wplx"]
[ext_resource type="PackedScene" uid="uid://cg0em3ad7vvio" path="res://addons/vision_cone_2d/vision_cone_ENEMY.tscn" id="2_fqpm1"]
[ext_resource type="Texture2D" uid="uid://b2x03uygdnth7" path="res://Assets/Enemy Variations/Shotgun/Idle.png" id="3_2wplx"]
[ext_resource type="Texture2D" uid="uid://xtiw3vcqhbr2" path="res://Assets/Enemy Variations/Shotgun/ShootAN.png" id="4_esv1c"]

[sub_resource type="CanvasItemMaterial" id="CanvasItemMaterial_7vx65"]
light_mode = 2

[sub_resource type="AtlasTexture" id="AtlasTexture_bbrx7"]
atlas = ExtResource("3_2wplx")
region = Rect2(0, 0, 23, 34)

[sub_resource type="AtlasTexture" id="AtlasTexture_ag8v7"]
atlas = ExtResource("4_esv1c")
region = Rect2(0, 0, 23, 41)

[sub_resource type="AtlasTexture" id="AtlasTexture_7238g"]
atlas = ExtResource("4_esv1c")
region = Rect2(23, 0, 23, 41)

[sub_resource type="AtlasTexture" id="AtlasTexture_spwy4"]
atlas = ExtResource("4_esv1c")
region = Rect2(46, 0, 23, 41)

[sub_resource type="AtlasTexture" id="AtlasTexture_bd1su"]
atlas = ExtResource("4_esv1c")
region = Rect2(69, 0, 23, 41)

[sub_resource type="SpriteFrames" id="SpriteFrames_esv1c"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_bbrx7")
}],
"loop": true,
"name": &"Idle",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_ag8v7")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_7238g")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_spwy4")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_bd1su")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ag8v7")
}],
"loop": false,
"name": &"ShootAN",
"speed": 12.0
}]

[sub_resource type="CircleShape2D" id="CircleShape2D_yr4x4"]
radius = 7.07107

[sub_resource type="SystemFont" id="SystemFont_ytysd"]
subpixel_positioning = 0

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_lah28"]
bg_color = Color(0.6, 0.6, 0.6, 0)
corner_radius_top_left = 16
corner_radius_top_right = 16
corner_radius_bottom_right = 16
corner_radius_bottom_left = 16

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_toelp"]
bg_color = Color(1.10701e-06, 0.719442, 0.343978, 1)
corner_radius_top_left = 2
corner_radius_top_right = 2
corner_radius_bottom_right = 2
corner_radius_bottom_left = 2
anti_aliasing = false

[node name="Shotgun Enemy Renforcements" type="CharacterBody2D"]
light_mask = 3
material = SubResource("CanvasItemMaterial_7vx65")
motion_mode = 1
script = ExtResource("1_2wplx")

[node name="VisionCone2D2" parent="." instance=ExtResource("2_fqpm1")]
use_parent_material = true
rotation = -1.5708
render = true
angle_deg = 1
ray_count = 1
max_distance = 125.0

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
use_parent_material = true
position = Vector2(1, 0)
rotation = 1.5708
scale = Vector2(0.5, 0.5)
sprite_frames = SubResource("SpriteFrames_esv1c")
animation = &"ShootAN"

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("CircleShape2D_yr4x4")

[node name="NavigationAgent2D" type="NavigationAgent2D" parent="."]
path_desired_distance = 1.0
path_postprocessing = 1
avoidance_enabled = true

[node name="NavigationObstacle2D" type="NavigationObstacle2D" parent="NavigationAgent2D"]
radius = 7.0

[node name="Marker2D" type="Marker2D" parent="."]
position = Vector2(10, 0)

[node name="CooldownTimer" type="Timer" parent="."]
wait_time = 0.75

[node name="Control" type="Control" parent="."]
use_parent_material = true
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = 12.0
offset_bottom = 12.0
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(0.5, 0.5)

[node name="ProgressBar" type="ProgressBar" parent="Control"]
visible = false
use_parent_material = true
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -27.5
offset_top = -7.0
offset_right = 27.5
offset_bottom = 7.0
grow_horizontal = 2
grow_vertical = 2
theme_override_fonts/font = SubResource("SystemFont_ytysd")
theme_override_font_sizes/font_size = 10
theme_override_styles/background = SubResource("StyleBoxFlat_lah28")
theme_override_styles/fill = SubResource("StyleBoxFlat_toelp")
value = 90.0
metadata/_edit_use_anchors_ = true

[connection signal="VisionEnterd" from="VisionCone2D2" to="." method="_on_vision_cone_2d_2_vision_enterd"]
[connection signal="VisionExited" from="VisionCone2D2" to="." method="_on_vision_cone_2d_2_vision_exited"]
[connection signal="path_changed" from="NavigationAgent2D" to="." method="_on_navigation_agent_2d_path_changed"]
[connection signal="target_reached" from="NavigationAgent2D" to="." method="_on_navigation_agent_2d_target_reached"]
[connection signal="velocity_computed" from="NavigationAgent2D" to="." method="_on_navigation_agent_2d_velocity_computed"]
[connection signal="timeout" from="CooldownTimer" to="." method="_on_cooldown_timer_timeout"]
